tests/lean/doSeqRightIssue.lean.expected.out
doSeqRightIssue.lean:5:24: error: unknown universe level v
doSeqRightIssue.lean:5:24: error: unknown universe level v
doSeqRightIssue.lean:7:0: error: don't know how to synthesize placeholder
context:
α : Type u
β : α → (sorryAx (Sort u_1))
ex : ∀ {p₁p₂ : (sorryAx (Sort u_2))} (h₁ : (sorryAx ?m.364)=(sorryAx ?m.364)), (sorryAx (?m.365 h₁))≅_ → p₁=p₂
p₁ p₂ : (sorryAx (Sort u_2))
h₁ : (sorryAx ?m.364)=(sorryAx ?m.364)
h : (sorryAx (?m.365 _))≅_
_a_1 _a_2 : (sorryAx (Sort u_2))
_a_3 : (sorryAx ?m.364)=(sorryAx ?m.364)
⊢ Prop
doSeqRightIssue.lean:7:0: error: don't know how to synthesize placeholder
context:
α : Type u
β : α → (sorryAx (Sort u_1))
ex : ∀ {p₁p₂ : (sorryAx (Sort u_2))} (h₁ : (sorryAx ?m.364)=(sorryAx ?m.364)), (sorryAx (?m.365 h₁))≅_ → p₁=p₂
p₁ p₂ : (sorryAx (Sort u_2))
h₁ : (sorryAx ?m.364)=(sorryAx ?m.364)
h : (sorryAx (?m.365 _))≅_
_a_1 _a_2 : (sorryAx (Sort u_2))
⊢ Prop
doSeqRightIssue.lean:7:66: error: don't know how to synthesize placeholder
  @HEq ?m.365 … … …
context:
α : Type u
β : α → (sorryAx (Sort u_1))
p₁ p₂ : (sorryAx (Sort u_2))
h₁ : (sorryAx ?m.364)=(sorryAx ?m.364)
⊢ Prop
doSeqRightIssue.lean:7:66: error: don't know how to synthesize placeholder
  @HEq ?m.365 … … …
context:
α : Type u
β : α → (sorryAx (Sort u_1))
p₁ p₂ : (sorryAx (Sort u_2))
h₁ : (sorryAx ?m.364)=(sorryAx ?m.364)
⊢ Prop
doSeqRightIssue.lean:7:48: error: don't know how to synthesize placeholder
  @Eq ?m.364 … …
context:
α : Type u
β : α → (sorryAx (Sort u_1))
p₁ p₂ : (sorryAx (Sort u_2))
⊢ Sort u_3
